tests/errors/invalid_type.re
fn main() {
    decl x: a[b];
}